Update to include NPM packages

--- a/roles/packages/tasks/main.yml
+++ b/roles/packages/tasks/main.yml
@@ -126,3 +126,6 @@
     name: cups
     state: started
     enabled: yes
+
+- name: Install npm packages
+  command: npm install -g electron nativefier node.js --unsafe-perm=true
