Updates with rendered templates

--- a/roles/apps/templates/gnome_desktop/gcal.desktop
+++ b/roles/apps/templates/gnome_desktop/gcal.desktop
@@ -3,8 +3,8 @@ Version=1.0
 Type=Application
 Name=Google Calendar
 Comment=Google Calendar 
-Exec=google-calendar-nativefier
-Icon="~/Pictures/icons/gcal.png"
+Exec=/home/{{ local_user }}/Applications/GoogleCalendar-linux-x64/GoogleCalendar
+Icon=/home/{{ local_user }}/Pictures/icons/gcal.png
 Terminal=false
 StartupNotify=false
 Categories=Network;Office;Calendar;;
