Added gnome clocks and weather

--- a/roles/packages/tasks/main.yml
+++ b/roles/packages/tasks/main.yml
@@ -86,6 +86,8 @@
     - electron12
     - libdvdcss
     - ocs-url
+    - gnome-clocks
+    - gnome-weather
 
 - name: Remove common desktop packages
   pacman:
