--- a/roles/packages/tasks/main.yml
+++ b/roles/packages/tasks/main.yml
@@ -117,13 +117,13 @@
   ansible.builtin.service:
     name: cups
     state: started
-    enabled: yes
+    enabled: true
 
 - name: Start Docker
   ansible.builtin.service:
     name: docker
     state: started
-    enabled: yes
+    enabled: true
 
 - name: Install npm packages
   ansible.builtin.command: npm install -g nativefier
