Updated Packages, and Lint

--- a/roles/apps/tasks/main.yml
+++ b/roles/apps/tasks/main.yml
@@ -61,7 +61,7 @@
   register: alacritty_stat
 
 - name: Disable Alacritty Built-in icon
-  become: yes
+  become: true
   command: mv /usr/share/applications/Alacritty.desktop /usr/share/applications/Alacritty.desktop.not
   when: alacritty_stat.stat.exists
 
@@ -72,7 +72,7 @@
   register: gcal_stat
 
 - name: Disable Google Calendar Built-in icon
-  become: yes
+  become: true
   command: mv /usr/share/applications/google-calendar-nativefier.desktop /usr/share/applications/google-calendar-nativefier.desktop.not
   when: gcal_stat.stat.exists
 
@@ -83,7 +83,7 @@
   register: gnome_terminal_stat
 
 - name: Disable Gnome-Terminal Built-in icon
-  become: yes
+  become: true
   command: mv /usr/share/applications/org.gnome.Terminal.desktop /usr/share/applications/org.gnome.Terminal.desktop.not
   when: gnome_terminal_stat.stat.exists
 
