--- a/roles/gnome/tasks/main.yml
+++ b/roles/gnome/tasks/main.yml
@@ -1,100 +1,99 @@
 ---
 - name: Get Gnome Profile
-  shell: gsettings get org.gnome.Terminal.ProfilesList default  | awk -F \' '{print $2}'
+  ansible.builtin.shell: gsettings get org.gnome.Terminal.ProfilesList default  | awk -F \' '{print $2}'
   become_user: "{{ local_user }}"
   register: profile
 
 - name: Setup Gnome
-  dconf:
+  community.general.dconf:
     key: "{{ item.k }}"
     value: "{{ item.v }}"
     state: present
   become_user: "{{ local_user }}"
   loop:
-    - k: "/org/gnome/desktop/interface/clock-format"
+    - k: /org/gnome/desktop/interface/clock-format
       v: "'12h'"
-    - k: "/org/gnome/desktop/interface/enable-hot-corners"
+    - k: /org/gnome/desktop/interface/enable-hot-corners
       v: "false"
-    - k: "/org/gnome/desktop/interface/show-battery-percentage"
+    - k: /org/gnome/desktop/interface/show-battery-percentage
       v: "true"
-    - k: "/org/gnome/desktop/datetime/automatic-timezone"
+    - k: /org/gnome/desktop/datetime/automatic-timezone
       v: "true"
-    - k: "/org/gnome/desktop/privacy/remember-app-usage"
+    - k: /org/gnome/desktop/privacy/remember-app-usage
       v: "false"
-    - k: "/org/gnome/system/location/enabled"
+    - k: /org/gnome/system/location/enabled
       v: "true"
-    - k: "/org/gnome/system/location/max-accuracy-level"
+    - k: /org/gnome/system/location/max-accuracy-level
       v: "'exact'"
-    - k: "/org/gnome/terminal/legacy/confirm-close"
+    - k: /org/gnome/terminal/legacy/confirm-close
       v: "false"
-    - k: "/org/gnome/terminal/legacy/shell-integration-enabled"
+    - k: /org/gnome/terminal/legacy/shell-integration-enabled
       v: "true"
-    - k: "/org/gnome/terminal/legacy/unified-menu"
+    - k: /org/gnome/terminal/legacy/unified-menu
       v: "false"
-    - k: "/org/gnome/shell/overrides/dynamic-workspaces"
+    - k: /org/gnome/shell/overrides/dynamic-workspaces
       v: "false"
-    - k: "/org/gnome/shell/overrides/workspaces-only-on-primary"
+    - k: /org/gnome/shell/overrides/workspaces-only-on-primary
       v: "true"
-    - k: "/org/gnome/shell/window-switcher/current-workspace-only"
+    - k: /org/gnome/shell/window-switcher/current-workspace-only
       v: "false"
-    - k: "/org/gnome/desktop/peripherals/touchpad/natural-scroll"
+    - k: /org/gnome/desktop/peripherals/touchpad/natural-scroll
       v: "false"
-    - k: "/org/gnome/peripherals/mouse/natural-scroll"
+    - k: /org/gnome/peripherals/mouse/natural-scroll
       v: "false"
-    - k: "/org/gnome/settings-daemon/plugins/power/ambient-enabled"
+    - k: /org/gnome/settings-daemon/plugins/power/ambient-enabled
       v: "false"
-    - k: "/org/gnome/settings-daemon/plugins/power/idle-brightness"
+    - k: /org/gnome/settings-daemon/plugins/power/idle-brightness
       v: "50"
-    - k: "/org/gnome/mutter/dynamic-workspaces"
+    - k: /org/gnome/mutter/dynamic-workspaces
       v: "false"
-    - k: "/org/gnome/settings-daemon/plugins/color/night-light-schedule-automatic"
+    - k: /org/gnome/settings-daemon/plugins/color/night-light-schedule-automatic
       v: "false"
-    - k: "/org/gnome/settings-daemon/plugins/color/night-light-enabled"
+    - k: /org/gnome/settings-daemon/plugins/color/night-light-enabled
       v: "false"
-    - k: "/ca/desrt/dconf-editor/automatic-night-mode"
+    - k: /ca/desrt/dconf-editor/automatic-night-mode
       v: "false"
-    - k: "/org/gnome/shell/weather/automatic-location"
+    - k: /org/gnome/shell/weather/automatic-location
       v: "true"
-    - k: "/org/gnome/shell/favorite-apps"
+    - k: /org/gnome/shell/favorite-apps
       v: "['google-chrome.desktop', 'gmail.desktop', 'gcal.desktop', 'slack.desktop', 'visual-studio-code.desktop', 'alacritty.desktop']"
 
 - name: Setup Gnome Terminal
-  shell: "{{ item }}"
+  ansible.builtin.shell: "{{ item }}"
   become_user: "{{ local_user }}"
   loop:
-    - "gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ profile.stdout }}/ visible-name Default"
-    - "gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ profile.stdout }}/ use-system-font false"
-    - "gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ profile.stdout }}/ font 'Monospace 14'"
-    - "gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ profile.stdout }}/ cell-height-scale '1.2'"
-    - "gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ profile.stdout }}/ audible-bell false"
-    - "gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ profile.stdout }}/ scrollback-unlimited false"
-    - "gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ profile.stdout }}/ scrollbar-policy never"
-    - "gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ profile.stdout }}/ use-custom-command true"
-    - "gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ profile.stdout }}/ custom-command /usr/bin/tmux"
+    - gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ profile.stdout }}/ visible-name Default
+    - gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ profile.stdout }}/ use-system-font false
+    - gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ profile.stdout }}/ font 'Monospace 14'
+    - gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ profile.stdout }}/ cell-height-scale '1.2'
+    - gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ profile.stdout }}/ audible-bell false
+    - gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ profile.stdout }}/ scrollback-unlimited false
+    - gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ profile.stdout }}/ scrollbar-policy never
+    - gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ profile.stdout }}/ use-custom-command true
+    - gsettings set org.gnome.Terminal.Legacy.Profile:/org/gnome/terminal/legacy/profiles:/:{{ profile.stdout }}/ custom-command /usr/bin/tmux
 
-- include_tasks: main_extension.yml
+- ansible.builtin.include_tasks: main_extension.yml
   vars:
     gnome_extension_ids:
-    - 906
-    - 4099
-    - 16
-    - 4158
-    - 4052
-    - 615
-    - 4135
-    - 2594
-    - 1401
-    - 112
+      - 906
+      - 4099
+      - 16
+      - 4158
+      - 4052
+      - 615
+      - 4135
+      - 2594
+      - 1401
+      - 112
 
-- include_tasks: remove_extension.yml
-
+- ansible.builtin.include_tasks: remove_extension.yml
 - name: Remove extra Manjaro junk files
-  file:
+  ansible.builtin.file:
     path: " /etc/skel/.config/autostart/{{ item }}"
     state: absent
   with_items:
-  - firefox-theme.desktop 
-  - manjaro-hello.desktop
+    - firefox-theme.desktop
+    - manjaro-hello.desktop
 
 - name: Set GDM theme
-  command: set-gdm-theme set
+  ansible.builtin.command: set-gdm-theme set
