--- a/roles/gnome/tasks/main_extension.yml
+++ b/roles/gnome/tasks/main_extension.yml
@@ -2,31 +2,31 @@
 # tasks file for gnome-extensions
 
 - name: Parse Gnome Shell version
-  shell: gnome-shell --version | sed 's/[^0-9.]*\([0-9.]*\).*/\1/'
+  ansible.builtin.shell: gnome-shell --version | sed 's/[^0-9.]*\([0-9.]*\).*/\1/'
   register: r_gnome_extension_parse_shell_version
   changed_when: false
 
 - name: Set gnome_shell_version fact
-  set_fact:
+  ansible.builtin.set_fact:
     gnome_shell_version: "{{ r_gnome_extension_parse_shell_version.stdout }}"
 
 - name: Get Gnome Shell extension info
-  uri:
+  ansible.builtin.uri:
     url: https://extensions.gnome.org/extension-info/?pk={{ item }}&shell_version={{ gnome_shell_version }}
     return_content: true
   loop: "{{ gnome_extension_ids }}"
   register: r_gnome_extension_info
   ignore_errors: true
 
-- include_tasks: install_extension.yml
+- ansible.builtin.include_tasks: install_extension.yml
   vars:
     gnome_extension_info: "{{ item.json }}"
   loop: "{{ r_gnome_extension_info.results }}"
   when: item.status == 200
 
 - name: Set Permissions for all extensions
-  file:
-    dest: "/home/{{ local_user }}/.local/share/gnome-shell/extensions"
+  ansible.builtin.file:
+    dest: /home/{{ local_user }}/.local/share/gnome-shell/extensions
     group: "{{ local_user }}"
-    mode: 0775
+    mode: "0775"
     recurse: true
